# vault-mcp-server

./: .gitignore  .graphifyignore  CLAUDE.md  README.md  SKILL.md  db.py  server.py
.taskmaster/docs/: prd.md
.taskmaster/scripts/: execution-state.py  learn-accuracy.py  track-time.py
.taskmaster/tasks/: tasks.json
db/: __init__.py  graph.py  notes.py  session.py  todos.py
docs/: USER_GUIDE.md  prd-knowledge-base.md
release/: README.md  install.ps1  install.sh
release/vault-mcp-server/: INSTALL.md  README.md  SKILL.md  db.py  pyproject.toml  requirements.txt  server.py
release/vault-mcp-server/db/: base.py  wikilinks.py
release/vault-mcp-server/docs/: USER_GUIDE.md
release/vault-mcp-server/services/: tags.py  validator.py
release/vault-mcp-server/skills/kb/: SKILL.md
release/vault-mcp-server/skills/kb-delete/: SKILL.md
release/vault-mcp-server/skills/kb-graph-build/: SKILL.md
release/vault-mcp-server/skills/kb-graph-query/: SKILL.md
release/vault-mcp-server/skills/kb-graph-status/: SKILL.md
release/vault-mcp-server/skills/kb-init/: SKILL.md
release/vault-mcp-server/skills/kb-learn/: SKILL.md
release/vault-mcp-server/skills/kb-list/: SKILL.md
release/vault-mcp-server/skills/kb-log/: SKILL.md
release/vault-mcp-server/skills/kb-orphan/: SKILL.md
release/vault-mcp-server/skills/kb-resume/: SKILL.md
release/vault-mcp-server/skills/kb-save/: SKILL.md
release/vault-mcp-server/skills/kb-search/: SKILL.md
release/vault-mcp-server/skills/kb-stats/: SKILL.md
release/vault-mcp-server/skills/kb-tags/: SKILL.md
release/vault-mcp-server/skills/kb-todo-delete/: SKILL.md
release/vault-mcp-server/skills/kb-todo-done/: SKILL.md
release/vault-mcp-server/skills/kb-todo-list/: SKILL.md
release/vault-mcp-server/skills/kb-todo-pending/: SKILL.md
release/vault-mcp-server/skills/kb-todo-progress/: SKILL.md
release/vault-mcp-server/skills/kb-update/: SKILL.md
release/vault-mcp-server/tests/: __init__.py  test_db.py  test_services.py
release/vault-mcp-server/tools/: __init__.py  graphify_tools.py  vault_init.py  vault_list.py  vault_log.py  vault_orphan.py  vault_resume.py  vault_save.py  vault_stats.py  vault_tags.py  vault_todo_delete.py  vault_todo_pending.py  vault_tools.py
services/: __init__.py  resolver.py  wikilink.py
tests/: e2e_test.py  test_db.py  test_graphify_tools.py  test_vault_delete.py  test_vault_todo.py  test_vault_tools.py
tools/: _shared.py  graphify_tools.py  vault_delete.py  vault_search.py  vault_todo_done.py  vault_todo_list.py  vault_todo_progress.py  vault_tools.py  vault_update.py
